src/test/deca/context/invalid/resultats/test_multiply_class-cont.res
./src/test/deca/context/invalid/test_multiply_class.deca:23:5: The types are incompatible for a Arithmetic Operation
